--- a/track/templates/track/combined_page.html
+++ b/track/templates/track/combined_page.html
@@ -130,7 +130,7 @@
         <div id="plc-status" class="plc-status">🔴 Checking PLC Status...</div>
     </header>
 
-    <a href="http://127.0.0.1:8000/admin/track/traceabilitydata/" class="database-btn">🗄️</a>
+    <a href="http://127.0.0.1:8000/admin/track/traceabilitydata/" class="database-btn">💾</a>
     <a href="http://127.0.0.1:8000/search/" class="database-btn" style="left: 80px;">🔍</a>
     
     <style>
