change QR formate

--- a/track/templates/track/combined_page.html
+++ b/track/templates/track/combined_page.html
@@ -163,9 +163,9 @@
             <!-- Dropdown for selecting prefix -->
             <label for="prefix">Select Part Number:</label>
             <select id="prefix" name="prefix">
-                <option value="PDU-S-10594-1">PDU-S-10594-1</option>
-                <option value="PDB-S-10779-1">PDB-S-10779-1</option>
-                <option value="PDB-S-10697-1">PDB-S-10697-1</option>
+                <option value="556043200181">15L-AIR TANK</option>
+                <option value="556043200182">20L-AIR TANK</option>
+                <option value="556043200183">30L-AIR TANK</option>
             </select>
 
             <button id="print-button" class="form-button">Print QR Code</button>
