change qr format

--- a/track/templates/track/combined_page.html
+++ b/track/templates/track/combined_page.html
@@ -44,7 +44,7 @@
         }
 
         /* Button & Dropdown Styles */
-        .form-button {
+        .form-button, #prefix {
             background-color: #007BFF;
             color: white;
             padding: 10px 20px;
@@ -55,16 +55,21 @@
             margin-top: 10px;
         }
 
+        #prefix {
+            background-color:rgb(244, 247, 250);
+            color: Black;
+        }
+
         .form-button:hover {
             background-color: #0056b3;
         }
 
-        .dropdown {
-            width: 100%;
+        #prefix {
+            width: 10%;
             padding: 10px;
-            font-size: 16px;
+            font-size: 15px;
             border-radius: 4px;
-            border: 1px solid #ccc;
+            border: 2px solid #007BFF;
         }
 
         /* QR Display */
