--- a/track/templates/track/combined_page.html
+++ b/track/templates/track/combined_page.html
@@ -30,7 +30,7 @@
         }
 
         h1 {
-            color: #333;
+            color:  #ffffff;
         }
 
         /* Section Styles */
@@ -163,7 +163,7 @@
     <div class="content">
         <!-- QR Code Generator Section -->
         <div class="section">
-            <h1>QR Code Generator</h1>
+            <h2>QR Code Generator</h2>
 
             <!-- Dropdown for selecting prefix -->
             <label for="prefix">Select Part Number:</label>
@@ -179,7 +179,7 @@
 
         <!-- Torque Data Records Section -->
         <div class="section">
-            <h1>Torque Data Records</h1>
+            <h2>Torque Data Records</h2>
             <table>
                 <thead>
                     <tr>
@@ -203,7 +203,7 @@
 
     <!-- Footer Section -->
     <footer>
-        <p>&copy; 2025 FOURFRONT TRACEABILITY.</p>
+        <p>&copy; 2025 BAPL TRACEABILITY.</p>
     </footer>
 
     <script>
